2008-12-11  Ryan Lortie  <desrt@desrt.ca>

	Implement pull support on trash backend.

	* daemon/trashlib/trashitem.[ch]: add support for restoring items
	* daemon/gvfsbackendtrash.c: implement pull

2008-12-11  Ryan Lortie  <desrt@desrt.ca>

	New trash:/ backend.

	* daemon/trashlib: implementation of the reader side of the fd.o
	trash specification
	* daemon/gvfsbackendtrash.[ch]: rewrite based on trashlib
	* configure.ac: add daemon/trashlib/Makefile to output
	* daemon/Makefile.am: add trashlib/ subdir and include in trash
	backend libraries

2008-12-11  Dan Winship  <danw@gnome.org>

	* configure.ac: require libsoup-gnome, for SoupProxyResolverGNOME

	* daemon/gvfsbackendhttp.c (g_vfs_backend_http_init): add a
	SoupProxyResolverGNOME to the sessions, to automatically handle
	proxies. #522985

2008-12-11  Dan Winship  <danw@gnome.org>

	* daemon/soup-input-stream.c (read_async_done)
	(soup_input_stream_read_async, soup_input_stream_close_async):
	don't leak GSimpleAsyncResults. #551075.

	* daemon/gvfsbackendhttp.c (try_open_for_read): set_accumulate to
	FALSE on the response body to avoid extra allocating+freeing.
	Patch from Peter Christoffersen, part of #551075.
	(open_for_read_ready): unref the stream on error.

2008-12-09  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (_query_file_info_helper): Fix icon
	for the root directory of an obexftp server (Closes: #542687)

2008-12-09  Bastien Nocera  <hadess@hadess.net>

	* monitor/gphoto2/Makefile.am:
	* monitor/gphoto2/ggphoto2volumemonitor.c (get_stores_for_camera),
	(update_cameras): For each camera discovered, create shadow mounts
	for each one of the top-level storage heads, makes each of the
	device's stores appear separately

	* daemon/gvfsbackendgphoto2.c (monitors_emit_internal),
	(release_device), (split_filename), (file_get_info), (do_mount),
	(do_open_for_read_real), (do_query_info), (try_query_info),
	(do_enumerate), (try_enumerate), (do_make_directory),